# otterstax

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.integration-test  Dockerfile.test  LICENSE  NOTICE  compose.test.yml  compose.yml  conanfile.py  docker-run-tests.sh  main.cpp  readme.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: integration-tests-asan.yml  integration-tests-tsan.yml  integration-tests.yml  integration.yml  unit-tests.yml
catalog/: CMakeLists.txt  catalog_manager.cpp  catalog_manager.hpp
client_example/: CMakeLists.txt  client.cpp  client.py  example_1.txt  example_2.txt  example_3.txt  example_4.txt  example_5.txt  example_6.txt  example_7.txt
client_example/example_connetion/: add_connections_maria_db.sh  add_connections_maria_db_local.sh  check_connections_maria_db.sh  check_connections_maria_db_local.sh  connection_maria_db1_local.json  connection_maria_db2.json  connection_maria_db2_local.json  connection_maria_db3.json  connection_maria_db3_local.json  http_healthckeck.sh
client_example/example_connetion/tiny_tests/: add_connections.sh  check_connections.sh  connection_logins.json  connection_salaries.json  connection_users.json
client_example/mutable_examples/: example_1.txt  example_2.txt  example_3.txt  example_4.txt  example_5.txt  example_6.txt  example_7.txt  example_8.txt  example_9.txt  readme.md
component_manager/: CMakeLists.txt  component_manager.cpp  component_manager.hpp
connectors/: CMakeLists.txt  mysql_connector.cpp  mysql_connector.hpp  mysql_manager.cpp  mysql_manager.hpp
connectors/http_server/: connection_config.hpp  connection_server.cpp  connection_server.hpp
db_integration/: CMakeLists.txt
db_integration/nosql/: connection_manager.cpp  connection_manager.hpp
db_integration/otterbrix/: otterbrix_manager.cpp  otterbrix_manager.hpp
db_integration/sql/: connection_manager.cpp  connection_manager.hpp
fixtures/: generate_data.py  query_data.py
frontend/: CMakeLists.txt
frontend/common/: CMakeLists.txt  frontend_connection.cpp  frontend_connection.hpp  frontend_server.hpp  packet_reader_base.cpp  packet_reader_base.hpp  packet_writer_base.cpp  packet_writer_base.hpp  protocol_config.hpp  resultset_utils.cpp  resultset_utils.hpp  utils.cpp  utils.hpp
frontend/flight_sql_server/: CMakeLists.txt  batch_reader.cpp  batch_reader.hpp  server.cpp  server.hpp
frontend/mysql_server/: CMakeLists.txt  mysql_server.cpp  mysql_server.hpp  protocol_const.hpp  utils.cpp  utils.hpp
frontend/mysql_server/connection/: mysql_connection.cpp  mysql_connection.hpp  network_processing.cpp  packet_processing.cpp
frontend/mysql_server/mysql_defs/: capabilities.hpp  character_set.hpp  column_flags.hpp  error.hpp  field_type.hpp  server_command.hpp  server_status.hpp
frontend/mysql_server/packet/: length_encoded.cpp  length_encoded.hpp  packet_reader.cpp  packet_reader.hpp  packet_utils.cpp  packet_utils.hpp  packet_writer.cpp  packet_writer.hpp
frontend/mysql_server/resultset/: column_definition_41.cpp  column_definition_41.hpp  mysql_resultset.cpp  mysql_resultset.hpp
frontend/postgres_server/: CMakeLists.txt  postgres_server.hpp  protocol_const.hpp
frontend/postgres_server/connection/: packet_processing.cpp  pipeline_state.cpp  pipeline_state.hpp  postgres_connection.cpp  postgres_connection.hpp  transaction_manager.cpp  transaction_manager.hpp
frontend/postgres_server/packet/: packet_reader.cpp  packet_reader.hpp  packet_utils.cpp  packet_utils.hpp  packet_writer.cpp  packet_writer.hpp
frontend/postgres_server/postgres_defs/: error.hpp  field_type.hpp  message_type.hpp
frontend/postgres_server/resultset/: field_description.cpp  field_description.hpp  postgres_resultset.cpp  postgres_resultset.hpp
otterbrix/: CMakeLists.txt  config.hpp  types.hpp
otterbrix/operators/: execute_plan.cpp  execute_plan.hpp
otterbrix/parser/: parser.cpp  parser.hpp
otterbrix/query_generation/: sql_query_generator.cpp  sql_query_generator.hpp
otterbrix/translators/input/: mysql_to_chunk.cpp  mysql_to_chunk.hpp  mysql_to_complex.cpp  mysql_to_complex.hpp
otterbrix/translators/internal/: doc_to_chunk.cpp
otterbrix/translators/output/: chunk_to_arrow.cpp  chunk_to_arrow.hpp
routes/: CMakeLists.txt  catalog_manager.hpp  handler_by_id.hpp  nosql_connection_manager.hpp  otterbrix_manager.hpp  scheduler.hpp  sql_connection_manager.hpp
scheduler/: CMakeLists.txt  scheduler.cpp  scheduler.hpp  schema_utils.cpp  schema_utils.hpp
scripts/: format.sh
scripts/database/: add_connections_maria_db.sh  check_connections_maria_db.sh  connection_maria_db3.json  healthcheck.sh  http_healthckeck.sh
scripts/tools/: code-fromat.py  common.py
tests/: CMakeLists.txt  create_test_data.py  mysql_test_client.py  postgres_test_client.py  query_data.py  test_client.py  test_client_mutable.py  test_schema.py
tests/mock/: ml.hpp  mock_config.hpp  nosql_db_connection.hpp  otterbrix.hpp  parser.hpp  sql_db_connector.hpp
tests/mysql-front/: CMakeLists.txt  main.cpp  test_reader_writer.cpp  test_resultset.cpp
tests/scripts/: add_connections.sh  connection_maria_db1.json  http_healthcheck.sh  startup.sh
tests/system/: CMakeLists.txt  main.cpp  test_logging.cpp  test_scheduler.cpp
tests/unit/: CMakeLists.txt
tests/unit/schema/: CMakeLists.txt  test_schema_utils.cpp
tests/unit/utility/: CMakeLists.txt  test_cv_wrapper.cpp  test_session.cpp  test_task_worker.cpp
types/: otterbrix.hpp
utility/: connection_uid.hpp  cv_wrapper.hpp  logger.hpp  session.hpp  shared_flight_data.hpp  table_info.hpp  thread_pool_manager.hpp  timer.hpp  tsan_helper.hpp  wait_barrier.hpp  worker.hpp
